--- a/configs/seq_cvae/seq_cvae.yaml
+++ b/configs/seq_cvae/seq_cvae.yaml
@@ -1,4 +1,4 @@
-model_name: "seq_cvae"
+model_name: seq_cvae
 latent_dim: 64
 cond_dim: 512
 encoder_layer_dims: [1, 512] 
@@ -6,4 +6,5 @@ decoder_layer_dims: [512, 1]
 final_sigmoid: True
 iteration: 1000
 lr: 0.001
+save_root: outputs/${seq_cvae.model_name}
 weight_path: checkpoints/${dataset.name}/${seq_cvae.model_name}.pth
